# agent-behavior-development

./: .gitignore  ABD_Project_Documentation.docx  ABD_Project_Documentation_v4.docx  CHANGELOG.md  CODE_EXAMPLES.md  CREATION_SUMMARY.txt  GOVERNANCE.md  IMPLEMENTATION_GUIDE.md  LABELS.md  MANIFEST.md  MANIFESTO.md  PROVIDER_LAYER_ARCHITECTURE.md  PROVIDER_LAYER_FILES.txt  PROVIDER_LAYER_SUMMARY.md  README.md  pyproject.toml
.agent/workflows/: abd_task.md
config/: agents.yaml  memory.yaml  orchestify.yaml  providers.yaml
core/: recycle_development.md  roles_and_personas.md
docs/: orchestify-guide.md
management/: sprint_template.md  task_template.md
orchestify/: __init__.py  __main__.py  cli.py
orchestify/agents/: __init__.py  architect.py  base.py  engineer.py  engineer_android.py  engineer_backend.py  engineer_frontend.py  engineer_ios.py  qa.py  reviewer.py  reviewer_android.py  reviewer_backend.py  reviewer_frontend.py  reviewer_ios.py  tpm.py
orchestify/cli/: __init__.py  main.py
orchestify/core/: __init__.py  agent.py  agent_logger.py  config.py  engine.py  global_config.py  memory.py  router.py  sprint.py  state.py  workflow.py
orchestify/db/: __init__.py  console.py  database.py  models.py  repositories.py
orchestify/github/: __init__.py  client.py  issues.py  labels.py  milestones.py  pulls.py
orchestify/migrations/: __init__.py  runner.py
orchestify/providers/: __init__.py  base.py  claude.py  litellm_provider.py  openai_provider.py  registry.py
orchestify/tools/: __init__.py  dev_loop.py  file_ops.py  git_ops.py  project_scanner.py  shell.py
orchestify/utils/: __init__.py  logger.py  retry.py  validators.py
paradigm/core/: behavior_over_code.md  definition_of_done.md  principles.md  prompt_as_artifact.md
paradigm/process/: conflict_model.md  lifecycle.md  review_model.md  self_fix_policy.md  task_model.md
paradigm/promptops/: behavior_metrics.md
promptops/: scorecard.md
prompts/: README.md
prompts/guardrails/: code_standards.md  global_rules.md  issue_guidelines.md  (+1 more)
tests/: conftest.py
(+72 files in other folders)
